...
        nameLabel.alignment = .center
        nameLabel.lineBreakMode = .byTruncatingMiddle
        
        captureButton.bezelStyle = .rounded
        captureButton.keyEquivalent = "\r" // Enter key
        captureButton.target = self
        captureButton.setAccessibilityIdentifier("TakeScreenshotButton")
        
        stack.addArrangedSubview(title)
        stack.addArrangedSubview(nameLabel)
        stack.addArrangedSubview(captureButton)
        
        stack.translatesAutoresizingMaskIntoConstraints = false
...
