...
        setupView()
    }
    
    private func setupView() {
        wantsLayer = true
        layer?.masksToBounds = false
        setAccessibilityIdentifier("LoadingIndicator")
    }

    override func mouseDown(with event: NSEvent) {
        guard enablesWindowDrag else {
            super.mouseDown(with: event)
            return
...
