...
        refreshStopButton.target = self
        refreshStopButton.action = #selector(refreshStopClicked)
        addSubview(refreshStopButton)

        closeButton.tooltipText = "Close Window"
        closeButton.tooltipShortcut = "⌘W"
        closeButton.setAccessibilityIdentifier("PopupCloseButton")
        closeButton.target = self
        closeButton.action = #selector(closeClicked)
        addSubview(closeButton)

        collapseButton.setAccessibilityIdentifier("PopupCollapseButton")
        collapseButton.target = self
...
